[gd_scene load_steps=13 format=3 uid="uid://csmaqkwk66cjs"]

[ext_resource type="Script" path="res://addons/madtalk/madtalk_editor.gd" id="1"]
[ext_resource type="FontFile" uid="uid://b38okvijpcxmv" path="res://addons/madtalk/fonts/FreeSans_smal.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://c6topqf6spbbw" path="res://addons/madtalk/components/SideBar.tscn" id="8"]
[ext_resource type="FontFile" uid="uid://cgfeudab78x0q" path="res://addons/madtalk/fonts/FreeSans.ttf" id="8_78yji"]
[ext_resource type="FontFile" uid="uid://bhcws34lw0ak5" path="res://addons/madtalk/fonts/FreeSans_tiny.tres" id="9"]
[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/ButtonStyle.tres" id="10"]
[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/SheetItemStyle.tres" id="11"]
[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/GraphStyle.tres" id="12"]
[ext_resource type="FontFile" path="res://addons/madtalk/fonts/FreeSans_bold_small.tres" id="13"]
[ext_resource type="Texture2D" uid="uid://c4ne7fiheatjc" path="res://addons/madtalk/images/icon_search.png" id="14"]
[ext_resource type="PackedScene" uid="uid://cc7b2xbic6kf8" path="res://addons/madtalk/components/MainEditor_DialogSheetEdit.tscn" id="15"]

[sub_resource type="FontVariation" id="FontVariation_yfgdd"]
base_font = ExtResource("8_78yji")
spacing_top = -4
spacing_bottom = -4

[node name="MadTalkEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.1748
offset_right = -3.1748
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 31.0

[node name="GraphArea" type="GraphEdit" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
theme_override_styles/bg = ExtResource("12")
right_disconnects = true

[node name="SideBar" parent="." instance=ExtResource("8")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -216.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -13.0
grow_horizontal = 0

[node name="Content" type="Control" parent="SideBar"]
clip_contents = true
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0

[node name="CurrentPanel" type="Panel" parent="SideBar/Content"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = 105.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("11")

[node name="TitleLabel" type="Label" parent="SideBar/Content/CurrentPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 78.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
text = "Current sheet"

[node name="Label" type="Label" parent="SideBar/Content/CurrentPanel"]
layout_mode = 0
offset_left = 5.52808
offset_top = 23.0
offset_right = 21.5281
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
text = "ID:"

[node name="SheetIDLabel" type="Label" parent="SideBar/Content/CurrentPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 9.0
offset_top = 39.0
offset_right = -7.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.470588, 0.898039, 1, 1)
theme_override_fonts/font = ExtResource("13")
theme_override_font_sizes/font_size = 12
text = "1_start_here"
clip_text = true

[node name="Label2" type="Label" parent="SideBar/Content/CurrentPanel"]
layout_mode = 0
offset_left = 5.52808
offset_top = 62.0
offset_right = 96.5281
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("9")
theme_override_font_sizes/font_size = 12
text = "Short description"

[node name="DescEdit" type="Label" parent="SideBar/Content/CurrentPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 6.0
offset_top = 80.0
offset_right = -5.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.772549, 0.772549, 0.772549, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = SubResource("FontVariation_yfgdd")
theme_override_font_sizes/font_size = 10
text = "Demonstration sheet. You can delete this in your game, or repurpose it."
autowrap_mode = 3
clip_text = true

[node name="BtnEditSheet" type="Button" parent="SideBar/Content/CurrentPanel"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("10")
text = "Edit"

[node name="labelSheetList" type="Label" parent="SideBar/Content"]
layout_mode = 0
offset_left = 8.0
offset_top = 120.0
offset_right = 82.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
text = "Sheet list"

[node name="SearchIcon" type="TextureRect" parent="SideBar/Content"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -23.0
offset_top = 141.0
offset_right = -7.0
offset_bottom = 157.0
texture = ExtResource("14")

[node name="SearchEdit" type="LineEdit" parent="SideBar/Content"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 3.0
offset_top = 137.0
offset_right = -31.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("11")
placeholder_text = "Search ID or description"

[node name="SheetsScroll" type="ScrollContainer" parent="SideBar/Content"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 166.0
offset_bottom = -29.0

[node name="VBox" type="VBoxContainer" parent="SideBar/Content/SheetsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BtnNewSheet" type="Button" parent="SideBar/Content"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -24.0
offset_right = -4.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("10")
theme_override_styles/focus = ExtResource("10")
text = "Create New Dialog Sheet"

[node name="BtnSaveDB" type="Button" parent="SideBar/Content"]
visible = false
layout_mode = 0
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -24.0
offset_right = -4.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("3")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("10")
theme_override_styles/focus = ExtResource("10")
text = "Save Database"

[node name="PopupMenu" type="PopupMenu" parent="."]
size = Vector2i(141, 100)
item_count = 1
item_0/text = "New sequence"
item_0/id = 0

[node name="DialogDeleteNodePopup" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 187)
dialog_text = "

    Are you sure you want to delete this entire sequence?"
dialog_autowrap = true

[node name="DialogSheetRenameError" type="AcceptDialog" parent="."]
size = Vector2i(500, 200)
dialog_text = "
    Error while renaming sheet:
	
	       The chosen sheet ID is not valid or 
		       there is already a sheet using this ID"
dialog_autowrap = true

[node name="DialogSheetCreated" type="AcceptDialog" parent="."]
size = Vector2i(400, 200)
dialog_text = "
    The new sheet was successfully created.
	
    You are now modifying the new one."
dialog_autowrap = true

[node name="DialogSheetEdit" parent="." instance=ExtResource("15")]
visible = false

[connection signal="connection_request" from="GraphArea" to="." method="_on_GraphArea_connection_request"]
[connection signal="disconnection_request" from="GraphArea" to="." method="_on_GraphArea_disconnection_request"]
[connection signal="gui_input" from="GraphArea" to="." method="_on_GraphEdit_gui_input"]
[connection signal="dragged" from="GraphArea/DialogNode_ID0" to="GraphArea/DialogNode_ID0" method="_on_DialogNode_dragged" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID0/DialogNodeItem" to="GraphArea/DialogNode_ID0/DialogNodeItem" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID0/@Control@70831" to="GraphArea/DialogNode_ID0/@Control@70831" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="dragged" from="GraphArea/DialogNode_ID1" to="GraphArea/DialogNode_ID1" method="_on_DialogNode_dragged" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID1/DialogNodeItem" to="GraphArea/DialogNode_ID1/DialogNodeItem" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID1/@Control@70836" to="GraphArea/DialogNode_ID1/@Control@70836" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID1/@Control@70838" to="GraphArea/DialogNode_ID1/@Control@70838" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID1/@Control@70839" to="GraphArea/DialogNode_ID1/@Control@70839" method="_on_DialogNodeItem_effect_gui_input" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID1/@Control@70840" to="GraphArea/DialogNode_ID1/@Control@70840" method="_on_DialogNodeItem_condition_gui_input" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID1/@Control@70842" to="GraphArea/DialogNode_ID1/@Control@70842" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="dragged" from="GraphArea/DialogNode_ID6" to="GraphArea/DialogNode_ID6" method="_on_DialogNode_dragged" flags=18]
[connection signal="gui_input" from="GraphArea/DialogNode_ID6/DialogNodeItem" to="GraphArea/DialogNode_ID6/DialogNodeItem" method="_on_DialogNodeItem_gui_input" flags=18]
[connection signal="pressed" from="SideBar/Content/CurrentPanel/BtnEditSheet" to="." method="_on_BtnEditSheet_pressed"]
[connection signal="text_changed" from="SideBar/Content/SearchEdit" to="." method="_on_SideBar_SearchEdit_text_changed"]
[connection signal="pressed" from="SideBar/Content/BtnNewSheet" to="." method="_on_BtnNewSheet_pressed"]
[connection signal="pressed" from="SideBar/Content/BtnSaveDB" to="." method="_on_BtnSaveDB_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_GraphArea_PopupMenu_id_pressed"]
[connection signal="confirmed" from="DialogDeleteNodePopup" to="." method="_on_DialogDeleteNodePopup_confirmed"]
[connection signal="confirmed" from="DialogSheetRenameError" to="." method="_on_DialogDeleteNodePopup_confirmed"]
[connection signal="confirmed" from="DialogSheetCreated" to="." method="_on_DialogDeleteNodePopup_confirmed"]
[connection signal="sheet_saved" from="DialogSheetEdit" to="." method="_on_DialogSheetEdit_sheet_saved"]
